Fixed menu overflow

--- a/src/Yanitor.Web/Components/Layout/UserMenu.razor.css
+++ b/src/Yanitor.Web/Components/Layout/UserMenu.razor.css
@@ -31,7 +31,7 @@
     top: 100%;
     right: 0;
     min-width: 12rem;
-    padding: 0.5rem 0.25rem 0.25rem 0.25rem;
+    padding: 0.5rem 0 0.25rem 0;
     margin: 0;
     list-style: none;
     background: transparent;
@@ -44,8 +44,8 @@
     display: block;
     position: absolute;
     top: 0.5rem;
-    left: 0;
-    right: 0;
+    left: 0.25rem;
+    right: 0.25rem;
     bottom: 0;
     background: white;
     border-radius: 0.5rem;
@@ -58,7 +58,7 @@
 }
 
 .user-menu__dropdown-item {
-    margin: 0;
+    margin: 0 0.25rem;
     list-style: none;
 }
 
@@ -69,6 +69,7 @@
 .user-menu__dropdown-link {
     width: 100%;
     display: block;
+    box-sizing: border-box;
     text-align: left;
     padding: 0.625rem 0.75rem;
     font-size: 0.875rem;
@@ -94,6 +95,7 @@
 .user-menu__dropdown-button {
     width: 100%;
     display: block;
+    box-sizing: border-box;
     text-align: left;
     padding: 0.625rem 0.75rem;
     font-size: 0.875rem;
